<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/event_create_scroll_view"
    android:layout_marginTop="40dp"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
            android:background="@android:color/darker_gray"
            android:contentDescription="Event Poster"
            android:layout_marginBottom="16dp" />

        <!-- Form Fields -->
        <EditText
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Name"
            android:inputType="text"
            android:layout_marginBottom="8dp" />

...
            android:layout_height="wrap_content"
            android:hint="Date,Time"
            android:inputType="datetime"
            android:layout_marginBottom="8dp" />-->

        <EditText
            android:id="@+id/event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location"
            android:inputType="textPostalAddress"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/max_participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Max Participants"
            android:inputType="number"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/waiting_list_limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Waiting List Limit"
            android:inputType="number"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Description"
            android:inputType="textMultiLine"
            android:layout_marginBottom="10dp" />
        <Switch
            android:id="@+id/geolocation_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enable Geolocation"
            android:checked="true"
            android:enabled="true"
            android:padding="20dp"/>
...
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cancel"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@android:color/holo_red_light" />

                <Button
                    android:id="@+id/button_create_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Save"
                    android:backgroundTint="@color/purple" />
            </LinearLayout>
        </LinearLayout>
...
