...
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:gravity="center">

        <SearchView
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:queryHint="Search events..."
            android:iconifiedByDefault="false" />

...
            android:layout_gravity="end"
            android:entries="@array/filter_options" />
    </LinearLayout>
    <!-- ListView to display user events -->

    <ListView
        android:id="@+id/user_events_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />


    <!-- Button to add an event (invisible by default) -->
    <Button
        android:id="@+id/btn_add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Event"
        android:layout_gravity="center"
        android:visibility="invisible"/>

    <!-- Button to add a facility (invisible by default) -->
    <Button
        android:id="@+id/btn_add_facility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Facility"
        android:layout_gravity="center"
        android:visibility="invisible"/>

    <!-- Button to view facilities (invisible by default) -->
    <Button
        android:id="@+id/btn_view_facility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Facilities"
        android:layout_gravity="center"
        android:visibility="invisible"/>

...
